np-egress.yml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: dais-dev
spec:
  selector: all()
  types:
    - Egress
  egress:
    - action: Allow
      destination:
        nets:
          - 0.0.0.0/0
      protocol: TCP
      ports:
        - 80
        - 443
        - 8000
        - 1443
