np-ingress.yml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: dais-dev
spec:
  selector: all()
  types:
    - Ingress
  egress:
    - action: Allow
      source:
        nets:
          - 0.0.0.0/0
      protocol: TCP
      ports:
        - 80
        - 443
        - 8000
        - 1443
